clusters/k3s/apps/media/jellyseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: docker-services
spec:
  type: ClusterIP
  ports:
  - port: 5055
    targetPort: 5055
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyseerr
  namespace: docker-services
subsets:
- addresses:
  - ip: 192.168.1.40
  ports:
  - port: 5055
---
